--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -157,15 +157,16 @@
                 app:layout_constraintTop_toTopOf="@id/tv_information"/>
 
             <TextView
+                android:id="@+id/tv_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:text="@string/text_latest"
                 android:textColor="@color/text_setting"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_information"
                 app:layout_constraintEnd_toStartOf="@id/iv_information"
-                app:layout_constraintTop_toTopOf="@id/tv_information"/>
+                app:layout_constraintTop_toTopOf="@id/tv_information"
+                tools:text="@string/text_latest"/>
 
             <View
                 android:layout_width="match_parent"
