Made some improvement to the UI.

--- a/app/src/main/res/layout/activity_version.xml
+++ b/app/src/main/res/layout/activity_version.xml
@@ -95,6 +95,7 @@
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/iv_icon"
                     app:normalStrokeColor="@color/btn_update"
                     app:normalStrokeWidth="1dp"
