--- a/app/src/main/res/layout/item_expand.xml
+++ b/app/src/main/res/layout/item_expand.xml
@@ -36,11 +36,13 @@
 
     <TextView
         android:id="@+id/tv_letter"
-        style="@style/VerticalConstraintParent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center"
+        android:maxLines="6"
         android:textSize="9sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_day"
         tools:ignore="SmallSp"
         tools:text="This is test code."/>
 
