Made some improvement to the UI.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,21 @@
         style="@style/VerticalLinearLayout"
         android:layout_weight="9">
 
-        <dev.kxxcn.app_with.util.SwipeViewPager
-            android:id="@+id/vp_main"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+            <dev.kxxcn.app_with.util.SwipeViewPager
+                android:id="@+id/vp_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <com.github.ybq.android.spinkit.SpinKitView
+                android:id="@+id/sv_loading"
+                style="@style/SpinKitViewProgressbar"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
