--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             app:bb_behavior="shifting|underNavbar"
             app:bb_tabXmlResource="@xml/bottombar_tabs_couple"/>
 
