--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,6 +78,8 @@
     <color name="text_plan_month">#c6c4c4</color>
     <color name="text_delete">#000000</color>
     <color name="text_setting">#bdbdbd</color>
+    <color name="text_notice_subject">#000000</color>
+    <color name="text_notice_date">#616161</color>
 
     <color name="selected_circleindicator">#ffffff</color>
     <color name="unselected_circleindicator">#84797d</color>
