--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -175,6 +175,12 @@
                 style="@style/IconImageButton"
                 android:background="@drawable/ic_blur"/>
 
+            <ImageButton
+                android:id="@+id/ib_gallery"
+                style="@style/IconImageButton"
+                android:background="@drawable/ic_gallery"
+                android:visibility="gone"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -262,9 +268,9 @@
                 android:id="@+id/sb_blur"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
                 android:max="100"
                 android:thumb="@drawable/ic_seekbar"/>
 
