Made some improvement to the UI.

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -206,10 +206,9 @@
 
             </android.support.constraint.ConstraintLayout>
 
-            <ProgressBar
-                android:id="@+id/pb_loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <com.github.ybq.android.spinkit.SpinKitView
+                android:id="@+id/sv_loading"
+                style="@style/SpinKitViewProgressbar"
                 android:layout_centerInParent="true"
                 android:visibility="gone"/>
 
