--- a/app/src/main/res/layout/item_expand.xml
+++ b/app/src/main/res/layout/item_expand.xml
@@ -39,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
-        android:maxLines="6"
+        android:maxLines="4"
+        android:ellipsize="end"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_day"
