--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -26,4 +26,8 @@
     <string name="background_default">
         <item>#757575</item>
     </string>
+    <string-array name="gender">
+        <item>남자</item>
+        <item>여자</item>
+    </string-array>
 </resources>
