--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -64,13 +64,18 @@
                     android:visibility="gone"/>
 
                 <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab_write"
+                    style="@style/WriteFloatingActionButton"
+                    android:visibility="invisible"/>
+
+                <android.support.design.widget.FloatingActionButton
                     android:id="@+id/fab_delete"
                     style="@style/DeleteFloatingActionButton"
                     android:visibility="invisible"/>
 
                 <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/fab_write"
-                    style="@style/WriteFloatingActionButton"
+                    android:id="@+id/fab_edit"
+                    style="@style/EditFloatingActionButton"
                     android:visibility="invisible"/>
 
                 <android.support.design.widget.FloatingActionButton
