Modified the color of button.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,7 +64,7 @@
 
     <color name="btn_start">#727171</color>
     <color name="btn_auth">#0cad7b</color>
-    <color name="btn_bottom_item">#d6cfcf</color>
+    <color name="btn_bottom_item">#5b5853</color>
     <color name="btn_gender">#727171</color>
     <color name="btn_male">#93b8ff</color>
     <color name="btn_female">#ffd3f0</color>
