--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/title</item>
+        <item name="android:textColor">@color/overall_color</item>
         <item name="android:textSize">15sp</item>
     </style>
 
