Made some improvement to the UI.

--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:background="@drawable/ic_cancel"/>
+                android:background="@drawable/ic_cancel"
+                android:visibility="gone"/>
 
             <TextView
                 style="@style/TopTextView"
@@ -34,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/ic_save"/>
 
         </RelativeLayout>
