--- a/app/src/main/res/layout/activity_notify.xml
+++ b/app/src/main/res/layout/activity_notify.xml
@@ -47,8 +47,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                app:SpinKit_Color="@color/colorAccent"
-                app:SpinKit_Style="FoldingCube"/>
+                app:SpinKit_Color="@color/overall_color"
+                app:SpinKit_Style="ThreeBounce"/>
 
         </RelativeLayout>
 
