--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_splash"
@@ -14,5 +15,188 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_fileName="write.json"/>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/view_top"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/view_bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanummyeongjo"
+            android:text="@string/text_input_password"
+            android:textColor="@color/text_welcome"
+            app:layout_constraintBottom_toTopOf="@id/iv_pass_1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/view_top"/>
+
+        <ImageView
+            android:id="@+id/iv_pass_1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/drawable_circle_empty"
+            app:layout_constraintBottom_toBottomOf="@id/view_top"
+            app:layout_constraintEnd_toStartOf="@id/iv_pass_2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/view_top"
+            app:layout_constraintVertical_bias="0.6"/>
+
+        <ImageView
+            android:id="@+id/iv_pass_2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/drawable_circle_empty"
+            app:layout_constraintEnd_toStartOf="@id/iv_pass_3"
+            app:layout_constraintStart_toEndOf="@id/iv_pass_1"
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+
+        <ImageView
+            android:id="@+id/iv_pass_3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/drawable_circle_empty"
+            app:layout_constraintEnd_toStartOf="@id/iv_pass_4"
+            app:layout_constraintStart_toEndOf="@id/iv_pass_2"
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+
+        <ImageView
+            android:id="@+id/iv_pass_4"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/drawable_circle_empty"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_pass_3"
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+
+        <View
+            android:id="@+id/view_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_top"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/view_bottom"
+            app:layout_constraintTop_toTopOf="@id/view_bottom">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/tv_number_1"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_1"/>
+
+                <TextView
+                    android:id="@+id/tv_number_2"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_2"/>
+
+                <TextView
+                    android:id="@+id/tv_number_3"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_3"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/tv_number_4"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_4"/>
+
+                <TextView
+                    android:id="@+id/tv_number_5"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_5"/>
+
+                <TextView
+                    android:id="@+id/tv_number_6"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_6"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/tv_number_7"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_7"/>
+
+                <TextView
+                    android:id="@+id/tv_number_8"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_8"/>
+
+                <TextView
+                    android:id="@+id/tv_number_9"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_9"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/tv_number_0"
+                    style="@style/PasswordTextView"
+                    android:text="@string/text_keyboard_0"/>
+
+                <LinearLayout
+                    android:id="@+id/ll_erase"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/iv_erase"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_erase"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
