--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/tv_profile"
                     style="@style/SettingContentTextView"
                     android:text="@string/text_profile"
-                    app:layout_constraintBottom_toTopOf="@id/tv_notification"
+                    app:layout_constraintBottom_toTopOf="@id/tv_lock"
                     app:layout_constraintTop_toBottomOf="@id/tv_account"/>
 
                 <ImageView
@@ -53,12 +53,32 @@
                     app:layout_constraintEnd_toEndOf="@id/tv_profile"
                     app:layout_constraintTop_toTopOf="@id/tv_profile"/>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/bg_setting_row"
+                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>
+
+                <TextView
+                    android:id="@+id/tv_lock"
+                    style="@style/SettingContentTextView"
+                    android:text="@string/text_lock"
+                    app:layout_constraintBottom_toTopOf="@id/tv_notification"
+                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>
+
+                <com.zcw.togglebutton.ToggleButton
+                    android:id="@+id/tb_lock"
+                    style="@style/SettingToggleButton"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_lock"
+                    app:layout_constraintEnd_toEndOf="@id/tv_lock"
+                    app:layout_constraintTop_toTopOf="@id/tv_lock"/>
+
                 <TextView
                     android:id="@+id/tv_notification"
                     style="@style/SettingTitleTextView"
                     android:text="@string/text_notification"
                     app:layout_constraintBottom_toTopOf="@id/tv_notice_with"
-                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>
+                    app:layout_constraintTop_toBottomOf="@id/tv_lock"/>
 
                 <TextView
                     android:id="@+id/tv_notice_with"
