--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -85,6 +85,7 @@
     <color name="text_notice_date">#616161</color>
     <color name="text_allowed_count">#1de9b6</color>
     <color name="text_denied_count">#f44336</color>
+    <color name="text_password_number">#616161</color>
 
     <color name="selected_circleindicator">#ffffff</color>
     <color name="unselected_circleindicator">#84797d</color>
