Made some improvement to the UI.

--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -152,10 +152,14 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <View
+            <TextView
+                android:id="@+id/tv_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/text_cancel"
+                android:textColor="@color/text_password_number"/>
 
             <TextView
                 android:id="@+id/tv_number_0"
