Refactoring the code.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_fileName="write.json"/>
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="write.json"
+        app:lottie_loop="true" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cl_password"
@@ -29,7 +30,7 @@
             app:layout_constraintBottom_toTopOf="@id/view_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +41,7 @@
             app:layout_constraintBottom_toTopOf="@id/iv_pass_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/view_top"/>
+            app:layout_constraintTop_toTopOf="@id/view_top" />
 
         <ImageView
             android:id="@+id/iv_pass_1"
@@ -51,7 +52,7 @@
             app:layout_constraintEnd_toStartOf="@id/iv_pass_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/view_top"
-            app:layout_constraintVertical_bias="0.6"/>
+            app:layout_constraintVertical_bias="0.6" />
 
         <ImageView
             android:id="@+id/iv_pass_2"
@@ -60,7 +61,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toStartOf="@id/iv_pass_3"
             app:layout_constraintStart_toEndOf="@id/iv_pass_1"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
 
         <ImageView
             android:id="@+id/iv_pass_3"
@@ -69,7 +70,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toStartOf="@id/iv_pass_4"
             app:layout_constraintStart_toEndOf="@id/iv_pass_2"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
 
         <ImageView
             android:id="@+id/iv_pass_4"
@@ -78,7 +79,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_pass_3"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
 
         <View
             android:id="@+id/view_bottom"
@@ -88,7 +89,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_top"/>
+            app:layout_constraintTop_toBottomOf="@id/view_top" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,17 +106,17 @@
                 <TextView
                     android:id="@+id/tv_number_1"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_1"/>
+                    android:text="@string/text_keyboard_1" />
 
                 <TextView
                     android:id="@+id/tv_number_2"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_2"/>
+                    android:text="@string/text_keyboard_2" />
 
                 <TextView
                     android:id="@+id/tv_number_3"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_3"/>
+                    android:text="@string/text_keyboard_3" />
 
             </LinearLayout>
 
@@ -127,17 +128,17 @@
                 <TextView
                     android:id="@+id/tv_number_4"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_4"/>
+                    android:text="@string/text_keyboard_4" />
 
                 <TextView
                     android:id="@+id/tv_number_5"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_5"/>
+                    android:text="@string/text_keyboard_5" />
 
                 <TextView
                     android:id="@+id/tv_number_6"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_6"/>
+                    android:text="@string/text_keyboard_6" />
 
             </LinearLayout>
 
@@ -149,17 +150,17 @@
                 <TextView
                     android:id="@+id/tv_number_7"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_7"/>
+                    android:text="@string/text_keyboard_7" />
 
                 <TextView
                     android:id="@+id/tv_number_8"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_8"/>
+                    android:text="@string/text_keyboard_8" />
 
                 <TextView
                     android:id="@+id/tv_number_9"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_9"/>
+                    android:text="@string/text_keyboard_9" />
 
             </LinearLayout>
 
@@ -171,12 +172,12 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/tv_number_0"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_0"/>
+                    android:text="@string/text_keyboard_0" />
 
                 <LinearLayout
                     android:id="@+id/ll_erase"
@@ -189,7 +190,7 @@
                         android:id="@+id/iv_erase"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_erase"/>
+                        android:background="@drawable/ic_erase" />
 
                 </LinearLayout>
 
