--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/sv_loading"
                 style="@style/SpinKitViewProgressbar"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
