--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="@android:color/white">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_splash"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <ImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/splash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_fileName="write.json"
-        app:lottie_loop="true" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cl_password"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <View
             android:id="@+id/view_top"
@@ -30,7 +29,7 @@
             app:layout_constraintBottom_toTopOf="@id/view_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +40,7 @@
             app:layout_constraintBottom_toTopOf="@id/iv_pass_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/view_top" />
+            app:layout_constraintTop_toTopOf="@id/view_top"/>
 
         <ImageView
             android:id="@+id/iv_pass_1"
@@ -52,7 +51,7 @@
             app:layout_constraintEnd_toStartOf="@id/iv_pass_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/view_top"
-            app:layout_constraintVertical_bias="0.6" />
+            app:layout_constraintVertical_bias="0.6"/>
 
         <ImageView
             android:id="@+id/iv_pass_2"
@@ -61,7 +60,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toStartOf="@id/iv_pass_3"
             app:layout_constraintStart_toEndOf="@id/iv_pass_1"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
 
         <ImageView
             android:id="@+id/iv_pass_3"
@@ -70,7 +69,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toStartOf="@id/iv_pass_4"
             app:layout_constraintStart_toEndOf="@id/iv_pass_2"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
 
         <ImageView
             android:id="@+id/iv_pass_4"
@@ -79,7 +78,7 @@
             android:background="@drawable/drawable_circle_empty"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_pass_3"
-            app:layout_constraintTop_toTopOf="@id/iv_pass_1" />
+            app:layout_constraintTop_toTopOf="@id/iv_pass_1"/>
 
         <View
             android:id="@+id/view_bottom"
@@ -89,7 +88,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_top" />
+            app:layout_constraintTop_toBottomOf="@id/view_top"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,17 +105,17 @@
                 <TextView
                     android:id="@+id/tv_number_1"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_1" />
+                    android:text="@string/text_keyboard_1"/>
 
                 <TextView
                     android:id="@+id/tv_number_2"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_2" />
+                    android:text="@string/text_keyboard_2"/>
 
                 <TextView
                     android:id="@+id/tv_number_3"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_3" />
+                    android:text="@string/text_keyboard_3"/>
 
             </LinearLayout>
 
@@ -128,17 +127,17 @@
                 <TextView
                     android:id="@+id/tv_number_4"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_4" />
+                    android:text="@string/text_keyboard_4"/>
 
                 <TextView
                     android:id="@+id/tv_number_5"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_5" />
+                    android:text="@string/text_keyboard_5"/>
 
                 <TextView
                     android:id="@+id/tv_number_6"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_6" />
+                    android:text="@string/text_keyboard_6"/>
 
             </LinearLayout>
 
@@ -150,17 +149,17 @@
                 <TextView
                     android:id="@+id/tv_number_7"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_7" />
+                    android:text="@string/text_keyboard_7"/>
 
                 <TextView
                     android:id="@+id/tv_number_8"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_8" />
+                    android:text="@string/text_keyboard_8"/>
 
                 <TextView
                     android:id="@+id/tv_number_9"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_9" />
+                    android:text="@string/text_keyboard_9"/>
 
             </LinearLayout>
 
@@ -169,19 +168,23 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <View
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tv_cancel"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/text_cancel"
+                    android:textColor="@color/text_password_number"/>
 
                 <TextView
                     android:id="@+id/tv_number_0"
                     style="@style/PasswordTextView"
-                    android:text="@string/text_keyboard_0" />
+                    android:text="@string/text_keyboard_0"/>
 
                 <LinearLayout
                     android:id="@+id/ll_erase"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center">
@@ -190,7 +193,7 @@
                         android:id="@+id/iv_erase"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_erase" />
+                        android:background="@drawable/ic_erase"/>
 
                 </LinearLayout>
 
