--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/overall_color">
 
     <View
         android:id="@+id/view_top"
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/nanummyeongjo"
         android:text="@string/text_input_password"
-        android:textColor="@color/text_welcome"
+        android:textColor="@color/text_password_number"
         app:layout_constraintBottom_toTopOf="@id/iv_pass_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
