--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,16 +3,16 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="@android:color/white">
+                                             android:background="@color/overall_color">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/splash"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/icon"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -20,7 +20,7 @@
         android:id="@+id/cl_password"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <View
             android:id="@+id/view_top"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanummyeongjo"
             android:text="@string/text_input_password"
-            android:textColor="@color/text_welcome"
+            android:textColor="@color/text_password_number"
             app:layout_constraintBottom_toTopOf="@id/iv_pass_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
