Added the synchronization feature.

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -177,7 +177,7 @@
                     android:id="@+id/tv_information"
                     style="@style/SettingContentTextView"
                     android:text="@string/text_information"
-                    app:layout_constraintBottom_toTopOf="@id/tv_sign_out"
+                    app:layout_constraintBottom_toTopOf="@id/tv_sync"
                     app:layout_constraintTop_toBottomOf="@id/tv_notify"/>
 
                 <ImageView
@@ -209,10 +209,37 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_information"/>
 
                 <TextView
+                    android:id="@+id/tv_sync"
+                    style="@style/SettingContentTextView"
+                    android:text="@string/text_sync"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toTopOf="@id/tv_sign_out"
+                    app:layout_constraintTop_toBottomOf="@id/tv_information"/>
+
+                <ImageView
+                    android:id="@+id/iv_sync"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_arrow_right"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_sync"
+                    app:layout_constraintEnd_toEndOf="@id/tv_sync"
+                    app:layout_constraintTop_toTopOf="@id/tv_sync"/>
+
+                <View
+                    android:id="@+id/divider_sync"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/bg_setting_row"
+                    android:visibility="visible"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sync"/>
+
+                <TextView
                     android:id="@+id/tv_sign_out"
                     style="@style/SettingContentTextView"
                     android:text="@string/text_sign_out"
-                    app:layout_constraintTop_toBottomOf="@id/tv_information"/>
+                    app:layout_constraintTop_toBottomOf="@id/tv_sync"/>
 
                 <ImageView
                     android:id="@+id/iv_sign_out"
