--- a/app/src/main/res/layout/dialog_detail.xml
+++ b/app/src/main/res/layout/dialog_detail.xml
@@ -50,6 +50,7 @@
                 android:layout_marginTop="5dp"
                 android:textColor="@color/secondary_icon"
                 android:textSize="15sp"
+                android:visibility="gone"
                 app:charIncrease="1"
                 app:layout_constraintStart_toStartOf="@id/ttv_date"
                 app:layout_constraintTop_toBottomOf="@id/ttv_date"
@@ -62,6 +63,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:background="@color/seekbar_bubble"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/ttv_place"
                 app:layout_constraintStart_toStartOf="@id/view_line"
                 app:layout_constraintTop_toBottomOf="@id/ttv_place" />
